# TradeSynth

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
examples/message_examples/: example_client.c
examples/trading_communication/: example_client.c  example_server.c
include/client/: client.h  client_types.h
include/common/: logger.h  types.h  utils.h
include/serialization/: serialization.h
include/server/: server.h  server_core.h  server_handlers.h  server_network.h  server_types.h
scripts/: docker-run.sh
src/client/: client.c  main.c
src/common/: logger.c  utils.c
src/serialization/: serialization.c
src/server/: main.c  server.c  server_core.c  server_handlers.c  server_network.c
tests/integration/: test_client_server.c
tests/unit/: test_client.c  test_serialization.c
